<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- Project Information -->
    <groupId>com.example</groupId> <!-- Change this to your project group ID -->
    <artifactId>graphical-representation</artifactId> <!-- Change this to your project artifact ID -->
    <version>1.0-SNAPSHOT</version>
    <name>Graphical Representation Project</name>
    <description>A project that uses JFreeChart for graphical representation</description>

    <!-- Dependencies -->
    <dependency>
        <groupId>org.jfree</groupId>
        <artifactId>jfreechart</artifactId>
        <version>1.5.3</version> <!-- You can use the latest version -->
    </dependency>


    <!-- Build Settings -->
    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version> <!-- Updated version -->
                <configuration>
                    <source>1.8</source> <!-- Java version -->
                    <target>1.8</target> <!-- Java version -->
                </configuration>
            </plugin>

            <!-- Plugin for running Java applications -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-exec-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>com.example.Main</mainClass> <!-- Replace with your main class -->
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
